fixed html typo

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./login_style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Zoo - Register</title>
+    <title>Task manager - Register</title>
 </head>
 
 <body>
