--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="login_style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Zoo - Login</title>
+    <title>Task manager - Login</title>
 </head>
 
 <body>
